--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap");
 @tailwind base;
 html {
   scroll-behavior: smooth;
 }
 @tailwind components;
 @tailwind utilities;
-
-*{
-  margin:0;
+@layer utilities {
+  .paused {
+    animation-play-state: paused;
+  }
+}
+* {
+  margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Fira+Code',monospace;
+  /* font-family: "Fira+Code", monospace; */
 }
